syntax = "proto3";

import "v1/server/ServerData.proto";

message LobbyMessage {

    oneof message_type {
        ToRegisterClient to_register_client = 1;
        ToClientHeartbeat to_client_heartbeat = 2;
        ToGetLobbyInformation to_get_lobby_information = 3;
        ToDataDump to_data_dump = 4;
        DataRobot data_robot = 5;

        FromRegisterClient from_register_client = 6;
        FromGetLobbyInformation from_get_lobby_information = 7;
        FromDataDumpConfirm from_data_dump_confirm = 8;
    }

    // To The Server
    message ToRegisterClient {
        LobbyClientInformation client_info = 1;
    }

    message ToClientHeartbeat {
        // LobbyClientInformation client_info = 1;
    }

    message ToGetLobbyInformation {
        uint64 sender_guid = 1;
    }

    message ToDataDump {
        string identifier = 1;
        bytes data = 2;
    }

    // From The Server
    message FromRegisterClient {
        LobbyClientInformation updated_client_info = 1;
    }

    message FromGetLobbyInformation {
        LobbyInformation lobby_information = 1;
    }

    message FromDataDumpConfirm {
        string identifier = 1;
    }

}
